--- a/UI/css/style.css
+++ b/UI/css/style.css
@@ -38,7 +38,8 @@ footer {
 hr {
     box-sizing: content-box;
     height: 0;
-    overflow: visible
+    overflow: visible;
+    width: 100%;
 }
 
 h1,h2,h3,h4,h5,h6 {
@@ -137,6 +138,10 @@ img {
     margin: 0 40%;
 }
 
+.center-div{
+    margin: auto;
+}
+
 /***********************
 *******CARDS************
 ***********************/
@@ -148,6 +153,10 @@ img {
     padding: 0;
     min-height: 450px;
     height: 100%;
+}
+
+.small-card{
+    max-width: 550px;
 }
 
 .card:hover {
@@ -455,7 +464,10 @@ th {
     color: white;
 }
 
-
+.table-img{
+    max-width: 40px;
+    max-height: 40px;
+}
 
 
 /****************************
