Added logo, footer, and navbar to all pages

--- a/UI/css/style.css
+++ b/UI/css/style.css
@@ -17,6 +17,10 @@ body{
     background-color: #F3F5F8;
 }
 
+html,body{
+    overflow-x: hidden;
+}
+
 a {
     color: #3287B2;
     text-decoration: none;
@@ -29,10 +33,14 @@ a:hover, a:focus {
 
 footer {
     position: absolute;
+    left: 0;
     bottom: 0;
     right: 0;
-    padding-top: 15px;
-    padding-bottom: 10px;
+    width: 97%;
+    padding: 15px 15px;
+    text-align: center;
+    color: #fff;
+    background-color: #222;
 }
 
 hr {
@@ -92,6 +100,8 @@ img {
     margin-right:auto;
     margin-left:auto;
     padding: 20px 20px;
+    margin-top: 60px;
+    margin-bottom: 80px;
 }
 
 .new-line {
@@ -298,9 +308,6 @@ img {
     .login-box .content {
         width: 95%;
     }
-    .login-box.lockscreen {
-        width: 90%;
-    }
 }
 
 .hidden{
@@ -398,6 +405,22 @@ img {
     background-color: #000000;
 }
 
+.button-transparent{
+    border: 1px solid #fff;
+    background-color: transparent;
+    color: #fff;
+}
+
+.button-transparent:focus, .button-transparent:hover {
+    color: #ccc;
+}
+
+.login-button{
+    margin-right: 10px;
+    margin-top: 10px;
+    float: right;
+}
+
 .shift-left {
     margin-left: 10px;
 }
@@ -473,3 +496,159 @@ th {
 /****************************
 *********NAV STYLES**********
 *****************************/
+.nav-header {
+    display: block;
+    margin: 0 auto;
+    width: 100%;
+    max-width: 100%;
+    box-shadow: none;
+    background-color: #f67350;
+    position: fixed;
+    height: 60px !important;
+    overflow: hidden;
+    z-index: 10;
+}
+
+.main {
+    margin: 0 auto;
+    display: block;
+    height: 100%;
+    margin-top: 60px;
+}
+
+.mainInner {
+    display: table;
+    height: 100%;
+    width: 100%;
+}
+
+.mainInner div {
+    display: table-cell;
+    vertical-align: middle;
+    font-size: 3em;
+    font-weight: bold;
+    letter-spacing: 1.25px;
+}
+
+#sidebarMenu {
+    height: 100%;
+    position: fixed;
+    left: 0;
+    width: 250px;
+    margin-top: 60px;
+    transform: translateX(-250px);
+    transition: transform 250ms ease-in-out;
+    background: linear-gradient(180deg, #f67350 0%, #be5033 100%);
+    z-index: 1;
+}
+
+.sidebarMenuInner {
+    margin: 0;
+    padding: 0;
+    border-top: 1px solid rgba(255, 255, 255, 0.10);
+}
+
+.sidebarMenuInner li {
+    list-style: none;
+    color: #fff;
+    text-transform: uppercase;
+    font-weight: bold;
+    padding: 20px;
+    cursor: pointer;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.10);
+}
+
+.sidebarMenuInner li span {
+    display: block;
+    font-size: 14px;
+    color: rgba(255, 255, 255, 0.50);
+}
+
+.sidebarMenuInner li a {
+    color: #fff;
+    text-transform: uppercase;
+    font-weight: bold;
+    cursor: pointer;
+    text-decoration: none;
+}
+
+input[type="checkbox"]:checked~#sidebarMenu {
+    transform: translateX(0);
+}
+
+input[type=checkbox] {
+    transition: all 0.3s;
+    box-sizing: border-box;
+    display: none;
+}
+
+.sidebarIconToggle {
+    transition: all 0.3s;
+    box-sizing: border-box;
+    cursor: pointer;
+    position: absolute;
+    z-index: 99;
+    height: 100%;
+    width: 100%;
+    top: 22px;
+    left: 15px;
+    height: 22px;
+    width: 22px;
+}
+
+.spinner {
+    transition: all 0.3s;
+    box-sizing: border-box;
+    position: absolute;
+    height: 3px;
+    width: 100%;
+    background-color: #fff;
+}
+
+.horizontal {
+    transition: all 0.3s;
+    box-sizing: border-box;
+    position: relative;
+    float: left;
+    margin-top: 3px;
+}
+
+.diagonal.part-1 {
+    position: relative;
+    transition: all 0.3s;
+    box-sizing: border-box;
+    float: left;
+}
+
+.diagonal.part-2 {
+    transition: all 0.3s;
+    box-sizing: border-box;
+    position: relative;
+    float: left;
+    margin-top: 3px;
+}
+
+input[type=checkbox]:checked~.sidebarIconToggle>.horizontal {
+    transition: all 0.3s;
+    box-sizing: border-box;
+    opacity: 0;
+}
+
+input[type=checkbox]:checked~.sidebarIconToggle>.diagonal.part-1 {
+    transition: all 0.3s;
+    box-sizing: border-box;
+    transform: rotate(135deg);
+    margin-top: 8px;
+}
+
+input[type=checkbox]:checked~.sidebarIconToggle>.diagonal.part-2 {
+    transition: all 0.3s;
+    box-sizing: border-box;
+    transform: rotate(-135deg);
+    margin-top: -9px;
+}
+
+.nav-logo{
+    margin-left: 50px;
+    margin-top: -4px;
+}
